--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -3,5 +3,6 @@
     <string-array name="movie_sort">
         <item>Most Popular</item>
         <item>Top Rated</item>
+        <item>Favorites</item>
     </string-array>
 </resources>
