--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="utf-8"?><!-- TODO: Place all dimensions into the dimensions file -->
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -75,15 +74,6 @@
         app:layout_constraintTop_toBottomOf="@+id/detail_movie_user_rating"
         tools:text="@string/detail_release_date" />
 
-
-    <!--<android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_reviews"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_trailers" />-->
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_trailers"
         android:layout_width="match_parent"
@@ -93,5 +83,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_movie_release_date" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_reviews"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rv_trailers" />
 
 </android.support.constraint.ConstraintLayout>
