--- a/app/src/main/res/layout/review_list_item.xml
+++ b/app/src/main/res/layout/review_list_item.xml
@@ -29,7 +29,5 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewAuthor"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginRight="16dp"
-        android:maxLines="2"
-        android:ellipsize="end" />
+        android:layout_marginRight="16dp" />
 </android.support.constraint.ConstraintLayout>
